trunk/Archive2/d3/a6fc918ffc7c30/output
main.cpp:10:15: error: looser throw specifier for 'virtual const char* SocketExceptionCreate::what() const'
   const char *what() const override { return( "Could not create socket." ); };
               ^
In file included from main.cpp:5:0:
/usr/include/c++/4.8/exception:68:25: error:   overriding 'virtual const char* std::exception::what() const noexcept (true)'
     virtual const char* what() const _GLIBCXX_USE_NOEXCEPT;
                         ^
main.cpp:17:15: error: looser throw specifier for 'virtual const char* SocketExceptionBind::what() const'
   const char *what() const override { return( "Could not bind to port." ); };
               ^
In file included from main.cpp:5:0:
/usr/include/c++/4.8/exception:68:25: error:   overriding 'virtual const char* std::exception::what() const noexcept (true)'
     virtual const char* what() const _GLIBCXX_USE_NOEXCEPT;
                         ^
main.cpp:24:15: error: looser throw specifier for 'virtual const char* SocketExceptionAccept::what() const'
   const char *what() const override { return( "Socket accept() failed." ); };
               ^
In file included from main.cpp:5:0:
/usr/include/c++/4.8/exception:68:25: error:   overriding 'virtual const char* std::exception::what() const noexcept (true)'
     virtual const char* what() const _GLIBCXX_USE_NOEXCEPT;
                         ^
